--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "GM-Standards"]
 	path = GM-Standards
-	url = git@github.com:xueqing/GM-Standards.git
+	url = git@gitee.com:openstd/GB-Docs.git
